# solutions

./: .gitignore
advent-of-code/2023/cpp/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt  configure  util.hpp
advent-of-code/2023/haskell/: 1.hs  2.hs  haskell.cabal
advent-of-code/2023/rust/: 1.rs  2.rs  3.rs  Cargo.toml  util.rs
advent-of-code/2024/ocaml/: README.md  dune-project  oaoc.opam  run
advent-of-code/2024/ocaml/lib/: day1.ml  day10.ml  day11.ml  day12.ml  day14.ml  day15.ml  day17.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  days.ml  direction.ml  dune  grid.ml  grid.mli  util.ml  util.mli
advent-of-code/2024/ocaml/tests/: day1.ml  days.ml  dune  grid.ml  util.ml
